--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,134 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
-  "projects": {}
+  "projects": {
+    "imperium": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "sass"
+        },
+        "@schematics/angular:application": {
+          "strict": true
+        }
+      },
+      "root": "projects/imperium",
+      "sourceRoot": "projects/imperium/src",
+      "prefix": "imp",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/imperium",
+            "index": "projects/imperium/src/index.html",
+            "main": "projects/imperium/src/main.ts",
+            "polyfills": "projects/imperium/src/polyfills.ts",
+            "tsConfig": "projects/imperium/tsconfig.app.json",
+            "aot": true,
+            "assets": [
+              "projects/imperium/src/favicon.ico",
+              "projects/imperium/src/assets"
+            ],
+            "styles": [
+              "projects/imperium/src/styles.sass"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/imperium/src/environments/environment.ts",
+                  "with": "projects/imperium/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "imperium:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "imperium:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "imperium:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/imperium/src/test.ts",
+            "polyfills": "projects/imperium/src/polyfills.ts",
+            "tsConfig": "projects/imperium/tsconfig.spec.json",
+            "karmaConfig": "projects/imperium/karma.conf.js",
+            "assets": [
+              "projects/imperium/src/favicon.ico",
+              "projects/imperium/src/assets"
+            ],
+            "styles": [
+              "projects/imperium/src/styles.sass"
+            ],
+            "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/imperium/tsconfig.app.json",
+              "projects/imperium/tsconfig.spec.json",
+              "projects/imperium/e2e/tsconfig.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        },
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "projects/imperium/e2e/protractor.conf.js",
+            "devServerTarget": "imperium:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "imperium:serve:production"
+            }
+          }
+        }
+      }
+    }},
+  "cli": {
+    "analytics": "dd2e8f49-376a-4a07-a443-67e83d60d467"
+  },
+  "defaultProject": "imperium"
 }
