--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-pi": "ng build --prod --base-href=/imperium/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
