--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~10.1.0",
     "@ngrx/effects": "^10.0.0",
     "@ngrx/router-store": "^10.0.0",
+    "@ngrx/schematics": "^10.0.0",
     "@ngrx/store": "^10.0.0",
     "@ngrx/store-devtools": "^10.0.0",
     "rxjs": "~6.5.4",
